# computer-use-raw-python-agent

./: .gitignore  README.md  STAGE_PROFILE.md  pyproject.toml
config/: agent.codex.gpt54.json  agent.default.json  agent.qwen35.default.json  agent.qwen35.fast.json  agent.qwen35.sglang.default.json  policy.unrestricted.local.json  stage_profile.json
docs/: AGENT_SERVICE_CONTRACT.md
runbooks/: QUICKSTART.md
src/computer_use_raw_python_agent/: __init__.py  cli.py  codex_backend.py  config_utils.py  daemon.py  executor_client.py  models.py  prompting.py  qwen_cli.py  qwen_daemon.py  qwen_runtime.py  runtime.py  service.py  sglang_cli.py  sglang_config.py  sglang_daemon.py  sglang_runtime.py  web_search.py
tests/: test_codex_backend.py  test_external_cli_runtime.py  test_prompting.py  test_service_completion.py
